--- a/public/layouts/page_blank.html
+++ b/public/layouts/page_blank.html
@@ -856,7 +856,7 @@
       </div>
     </div>
   </div>
-  <script src="{{SMART_API}}/js/tinymce.js"></script>
+  <script src="/js/tinymce.js"></script>
   <script>
     function iniciaEditorHtml(idElemento) {
       tinymce.init({
