--- a/public/layouts/paginas_instituiconais.html
+++ b/public/layouts/paginas_instituiconais.html
@@ -1073,7 +1073,7 @@
       </div>
     </div>
   </div>
-  <script src="{{SMART_API}}/js/tinymce.js"></script>
+  <script src="/js/tinymce.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script>
     let url = window.location.href
