--- a/views/layouts/cms.handlebars
+++ b/views/layouts/cms.handlebars
@@ -30,7 +30,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
     <script>
         var mainHost = '{{SMART_API}}'
-        var URL_IMAGES = '{{URL_IMAGES}}' 
+        var URL_IMAGES = '{{URL_IMAGES}}'
+        localStorage.mainHost = mainHost
+        localStorage.URL_IMAGES = URL_IMAGES
     </script>
     <style>
         .produtoSemFoto {
