--- a/views/layouts/picking.handlebars
+++ b/views/layouts/picking.handlebars
@@ -10,7 +10,9 @@
     <link rel="stylesheet" href="/assets/css/picking.css">
     <script>
         var mainHost = '{{SMART_API}}'
-        var URL_IMAGES = '{{URL_IMAGES}}' 
+        var URL_IMAGES = '{{URL_IMAGES}}'
+        localStorage.mainHost = mainHost
+        localStorage.URL_IMAGES = URL_IMAGES
     </script>
     <style>
         .produtoSemFoto {
