--- a/public/layouts/editarEmail.html
+++ b/public/layouts/editarEmail.html
@@ -876,7 +876,7 @@
 
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-  <script src="{{SMART_API}}/js/tinymce.js"></script>
+  <script src="/js/tinymce.js"></script>
   <script>
 
 
