--- a/views/layouts/startup.handlebars
+++ b/views/layouts/startup.handlebars
@@ -9,7 +9,9 @@
     <link href="../css/bootstrap.min.css" rel="stylesheet">
     <script>
         var mainHost = '{{SMART_API}}'
-        var URL_IMAGES = '{{URL_IMAGES}}' 
+        var URL_IMAGES = '{{URL_IMAGES}}'
+        localStorage.mainHost = mainHost
+        localStorage.URL_IMAGES = URL_IMAGES
     </script>
     <style>
         .produtoSemFoto {
